# spectrum-barometer

./: .gitignore  README.md  barometer_logger.py  config.yaml  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
barometer/: actions.py  background.py  data.py  graphs.py
data/: readings.csv
web/: app.py  routes.py
web/templates/: dashboard.html  stats.html
