[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "barometer"
version = "1.0.0"
description = "A CLI tool to make use of the barometer in locked down spectrum routers"
requires-python = ">=3.8"
dependencies = [
    "click>=8.0",
    "pandas>=1.3",
    "pyyaml>=5.4",
    "requests>=2.26",
    "urllib3>=1.26",
    "matplotlib>=3.4",
    "lxml>=4.6",
    "html5lib>=1.1",
]

[project.scripts]
barometer = "barometer_logger:cli"